--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="interface_users_addresses">/users/addresses</string>
     <string name="interface_users_addresses_default">/users/addresses/default</string>
     <string name="interface_users_orders">/users/orders</string>
+    <string name="interface_users_validate">/users/validate</string>
     <string name="title_activity_personal_order_main">PersonalOrderMainActivity</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
